2014-01-16  Mark Wielaard  <mjw@redhat.com>

	* run-backtrace-demangle.sh: Check exitcode and max number of frames.

2014-01-18  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Fix false FAILs on testsuite with ulimit -c unlimited.
	* backtrace-child.c (sigusr2): Call pthread_exit.
	(main): Return, do not call abort.

2014-01-15  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Fix corruption of non-C++ symbols by the demangler.
	* Makefile.am (TESTS): Add run-backtrace-demangle.sh.
	<!DEMANGLE>: Add ELFUTILS_DISABLE_DEMANGLE export.
	(EXTRA_DIST): Add run-backtrace-demangle.sh,
	testfile-backtrace-demangle.bz2, testfile-backtrace-demangle.cc,
	testfile-backtrace-demangle.core.bz2.
	* backtrace-demangle.cc: New file.
	* run-backtrace-demangle.sh: New file.
	* testfile-backtrace-demangle.bz2: New file.
	* testfile-backtrace-demangle.cc: New file.
	* testfile-backtrace-demangle.core.bz2: New file.

2014-01-07  Matthias Klose <doko@ubuntu.com>

	* backtrace-subr.sh (check_native_core): Check to see if core file
	was created without ".PID" extension, if so mv core to core.PID.
	Skip test if no core file was created or could be found.

2014-01-04  Mark Wielaard  <mjw@redhat.com>

	* backtrace-data.c (main): Don't assert if raise returns.
	* backtrace-dwarf.c (report_pid): Call dwfl_linux_proc_attach with
	assume_ptrace_attached true.
	(ptrace_detach_stopped): Removed function.
	(main): Don't call ptrace_detach_stopped.
	* backtrace.c (ptrace_detach_stopped): Removed function.
	(report_pid): Call dwfl_linux_proc_attach with assume_ptrace_attached
	true.
	(exec_dump): Don't call ptrace_detach_stopped.

2014-01-04  Mark Wielaard  <mjw@redhat.com>

	* backtrace-subr.sh (check_native_core): Skip, exit 77, the test
	if we cannot adjust core ulimit.

2014-01-04  Mark Wielaard  <mjw@redhat.com>

	* cleanup-13.c (force_unwind_stop): Removed.
	(force_unwind): Just call abort. Don't setup _Unwind_Exception and
	don't call _Unwind_ForcedUnwind.
